Remove --enable-preview from everywhere
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>