@@ -81,7 +81,7 @@
                             <suiteXmlFile>src/test/tck-suite.xml</suiteXmlFile>
                         </suiteXmlFiles>
                         <!-- required for Weld -->
-                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --enable-preview</argLine>
+                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                         <systemPropertyVariables>
                             <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
                             <config_ordinal>120</config_ordinal>
